<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommunityDetailFragment">

    <ImageView
        android:id="@+id/imageViewBanner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/str_community_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/sample_banner" />

    <View
        android:id="@+id/viewRowHighlight1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorHighlight"
        android:translationZ="-1dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewBanner" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewBanner"
        tools:text="@string/sample_description" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription">

        <ImageView
            android:id="@+id/imageViewLeader"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/str_community_leader_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/sample_leader_photo"
            tools:src="@drawable/ic_circle_mask" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewLeader"
            app:layout_constraintStart_toEndOf="@+id/imageViewLeader"
            app:layout_constraintTop_toTopOf="@+id/imageViewLeader">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                tools:text="@string/str_leader_" />

            <TextView
                android:id="@+id/textViewLeaderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="@string/sample_leader_name" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonTwitter"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="64dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorTwitter"
            android:drawableStart="@drawable/ic_twitter"
            android:drawableTint="@android:color/white"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonInstagram"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="64dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorInstagram"
            android:drawableStart="@drawable/ic_instagram"
            android:drawableTint="@android:color/white"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonTwitter"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonYoutube"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="64dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorYoutube"
            android:drawableStart="@drawable/ic_youtube"
            android:drawableTint="@android:color/white"
            android:padding="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonInstagram"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonParticipation"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_baseline_group_add_36"
            android:drawablePadding="8dp"
            android:drawableTint="@android:color/white"
            android:padding="16dp"
            android:text="@string/str_join"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonYoutube"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
